# emily-symbols

./: .gitignore  emily-symbols.py  emily_symbols.py  pyproject.toml
tests/: __init__.py  test_module.py
